--- a/ServerApp/ResouceDictionaries/TextBox_style.xaml
+++ b/ServerApp/ResouceDictionaries/TextBox_style.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="txbox_style" TargetType="TextBox">
+    <Style TargetType="TextBox" x:Key="txbox_style">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="IsEnabled" Value="False"/>
