--- a/ServerApp/Views/UserControls/Picture_UserControl.xaml
+++ b/ServerApp/Views/UserControls/Picture_UserControl.xaml
@@ -6,7 +6,10 @@
              xmlns:local="clr-namespace:ServerApp.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Background="{StaticResource userControl_background}" Margin="5" >
+    <StackPanel HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+        Background="{StaticResource userControl_background}"
+        Margin="5" >
 
         <TextBox Text="{Binding Photo.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  Margin="5"
@@ -19,7 +22,7 @@
             <Ellipse.Fill>
                 <ImageBrush x:Name="Picture" 
                             ImageSource="{Binding CurrentImageSource, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                            Stretch="Fill" 
+                            Stretch="UniformToFill" 
                            />
             </Ellipse.Fill>
         </Ellipse>
