--- a/ClientApp/ResourceDictionaries/ColorDictionary.xaml
+++ b/ClientApp/ResourceDictionaries/ColorDictionary.xaml
@@ -1,6 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
+    <LinearGradientBrush x:Key="mainColor">
+        <GradientStop Color="Red" Offset="0"></GradientStop>
+        <GradientStop Color="Orange" Offset="0.25" ></GradientStop>
+        <GradientStop Color="Yellow" Offset="0.5" ></GradientStop>
+        <GradientStop Color="Blue" Offset="1" ></GradientStop>
+    </LinearGradientBrush>
+
     <LinearGradientBrush x:Key="wrapPanelColor">
         <GradientStop Color="#59C173" Offset="0"></GradientStop>
         <GradientStop Color="#a17fe0" Offset="0.5" ></GradientStop>
@@ -16,5 +23,4 @@
         <GradientStop Color="#333333" Offset="0" ></GradientStop>
         <GradientStop Color="#dd1818" Offset="1"></GradientStop>
     </LinearGradientBrush>
-
 </ResourceDictionary>
